[package]
name = "async-osc"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Frando/async-osc"
documentation = "https://docs.rs/async-osc"
description = "Async library for the Open Sound Control (OSC) protocol"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Franz Heinzmann <franz@arso.xyz>"
]

[features]

[dependencies]
rosc = "0.4.2"
async-std = { version = "1.9.0", features = ["unstable"] }
log = "0.4.14"
futures-lite = "1.11.3"
thiserror = "1.0.24"

[dev-dependencies]
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
